# Categorizer-App

./: Dockerfile  README.md  app.py  data_processor.py  exercise_constants.py  goal_standards.py  matrix_generator.py  matrix_generator.py.backup  pdf_report_generator.py  pyproject.toml  replit.nix  report_generator.py  report_generator.py.new  requirements.txt  revert_min_days.sh  sync_from_github.sh  sync_to_github.sh  test_data.csv  time_constrained_processor.py  web_scraper.py
attached_assets/: Pasted-Step-by-Step-Instructions-1-Download-Add-the-Font-File-You-ll-need-a-TTF-font-I-suggest-usin-1744034858936.txt
